<resources>
    <string name="app_name">Plongeur</string>
    <string name="liste_des_equipements">Liste de mes équipements</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="zero">0</string>
    <string name="rechercher_par_nom">Rechercher</string>
    <string name="retour">Retour</string>
    <string name="ajouter">Ajouter</string>
    <string name="supprimer">Supprimer</string>
    <string name="editer">Éditer</string>
    <string name="numero">Numéro de téléphone</string>
    <string name="ajouter_entreprise">Ajouter une entreprise</string>
    <string name="nom">Nom</string>
    <string name="telephone">Téléphone</string>
    <string name="nombre_plongeurs">Nombre de plongeurs</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="se_connecter">Se connecter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="liste_des_utilisateurs">Liste des utilisateurs</string>
    <string name="lire_seulement">Lire seulement</string>
    <string name="lire_modifier">Lire/Modifier</string>




    <!-- Spinner items -->
    <string-array name="role_options">
        <item>Lire seulement</item>
        <item>Lire/Modifier</item>
    </string-array>

</resources>
