<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/cadre_evaluation">

    <!-- Image de l'équipement -->
    <ImageView
        android:id="@+id/equipment_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginEnd="10dp"/>

    <!-- Conteneur pour les détails de l'équipement -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Nom de l'équipement -->
        <TextView
            android:id="@+id/equipment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="Nom de l'équipement"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <!-- Conteneur pour la quantité et les boutons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">

            <!-- Bouton "-" -->
            <Button
                android:id="@+id/btn_decrease"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="18sp"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@android:color/white"/>

            <!-- Quantité de l'équipement -->
            <TextView
                android:id="@+id/equipment_quantite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"/>

            <!-- Bouton "+" -->
            <Button
                android:id="@+id/btn_increase"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/add"
                android:textSize="18sp"
                android:backgroundTint="@android:color/holo_green_light"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
